# codenames-optimizer

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
notebooks/: embeddings.ipynb  word_generation.ipynb
src/: cli.py  embedder.py  game.py  optimizer.py
