[project]
name = "codenames-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fire>=0.7.1",
    "ipykernel>=7.2.0",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "sentence-transformers>=5.3.0",
    "spacy>=3.8.13",
    "wordfreq>=3.1.1",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
codenames = "src.cli:cli"